{
    "name": "customCharacterInput",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "52a8ccda-c5ff-48d1-95c0-d013594efe02",
            "actions": [
                {
                    "name": "Vertical",
                    "type": "Value",
                    "id": "8da70ceb-4a1f-4713-aa3a-8a5f0b0d2122",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Horizontal",
                    "type": "Value",
                    "id": "2f29263c-6f59-47d8-ac76-a5c5f939996a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "View Horizontal",
                    "type": "Value",
                    "id": "bf82a42c-5107-42e5-b4c7-8089deaccb83",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "View Vertical",
                    "type": "Value",
                    "id": "1ec055aa-4f30-4bd1-967d-b899f3ead9ad",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "87429e06-28b5-4a50-8822-07428ecc1c8c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "4ba72410-bb36-42ae-ab22-9105baa3cc9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Keyboard View Horizontal",
                    "type": "Button",
                    "id": "f8902a71-ff92-4d22-bb40-6ad0b8f1a0d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Keyboard View Vertical",
                    "type": "Button",
                    "id": "2fb440ec-4edb-457d-8d0e-9baf9d264b72",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WS",
                    "id": "4de1e9b5-1f34-4dce-8b1d-8e04379f9f86",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "cdd30852-b45a-41f8-bc60-7337b21815a2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "436398f6-5933-477b-8209-d8890e5e17ba",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Up/Down",
                    "id": "11eef2d4-3172-46d1-bbeb-aadcd99419b5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "314a7eac-a186-49cb-8241-00600658f566",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c609df0a-7b0a-492f-a00c-88f8125bdf37",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "AD",
                    "id": "9715384c-169d-48b4-8695-4a58f5c7b397",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ee5be0d0-150f-42a9-bbbe-e8b5ba3b8f9d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "67dea358-16d3-40d8-991d-394bc7ea6f42",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LeftRight",
                    "id": "56f3b805-e60a-451c-aa24-e4e804045835",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "baa10570-a188-4549-b14f-761de35e0b50",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f68371b7-e52e-4531-9060-0628df7b38ea",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d8e892f2-371a-4d12-b979-0a6fd548ef86",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "View Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93743fcf-e3db-4445-ba07-990fda88f652",
                    "path": "<Touchscreen>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "529bf90f-578f-472d-b295-62968be668f4",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "View Vertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e8e0dd4-2d94-4828-a95d-5f4b6e98f4b3",
                    "path": "<Touchscreen>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View Vertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee67075f-206d-4250-91ab-e5ca681bd237",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "d9101615-dd78-43a3-8186-da6b91d5d1ab",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Keyboard View Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ffaa16f9-69c9-468c-848f-e39d8268d7bc",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Keyboard View Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "011220ff-8277-4d27-9172-604300b0ce65",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Keyboard View Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "c670c525-8242-401b-811e-2539f986f10c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Keyboard View Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "aa677d5c-a3c6-4515-9eb2-2787408421ab",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Keyboard View Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "36291aa9-cdb2-4b03-a655-d66b203f7eec",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Keyboard View Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "CommandMode",
            "id": "9d9410fb-83b9-4b6a-a104-c92d852a2880",
            "actions": [
                {
                    "name": "ExitFromCommandMode",
                    "type": "Button",
                    "id": "fc3eeaa9-521c-421f-9ca5-35404935103a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef4defa6-da46-4ded-9ff4-09f4e3904dd5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ExitFromCommandMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interface",
            "id": "cfbc6417-bc86-43c0-87ad-cedd2ea9034b",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "69b171e4-d152-430c-9a31-b7f3f52a3382",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "76870123-cb92-48c4-8559-f7df06d89209",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GotoCommandMode",
                    "type": "Button",
                    "id": "c5324dba-4cdb-4cdf-a09a-b3724cca4039",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "87c60993-bca5-41de-bb3c-07019187d630",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HelpMenu",
                    "type": "Button",
                    "id": "a9703f17-b6d9-4148-8657-58e17f5431e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ec268fe9-b6ef-46b4-8959-8d317c51bb4a",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f3a034b-0b65-4020-8bd3-28d55f4ef3fa",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "119d3d71-8334-4eb8-927b-f1a28593b179",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cac8b232-689a-4527-a604-cbedac71a9f3",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HelpMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Develop",
            "id": "387135ec-dd02-491d-9cd0-4097144d7734",
            "actions": [
                {
                    "name": "UnlockCursorKey",
                    "type": "Button",
                    "id": "4c1ea026-92b1-44a5-9a44-3312972f2fd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ee1e944-fe60-4a7f-9f4b-df97b2fbd0f2",
                    "path": "<Keyboard>/f12",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UnlockCursorKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Note",
            "id": "0efb212b-4ee0-4af9-9418-4037fc00fbb5",
            "actions": [
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "a8ea57f3-598f-44c0-a8e2-f44417e9acac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c37ef144-5a49-4fd7-8560-953eafcbaaa3",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca0a4892-a0bd-43dd-aac6-c322ea2f0d9c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe688ca4-6f3b-4033-9789-fcd8de325322",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}